xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__postfix_filter_nested.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"(1, 2)[. gt 2][. lt 3]\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        1,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                            op: Comma,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        4,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            1,
                        ),
                        length: SourceOffset(
                            4,
                        ),
                    },
                },
                return_expr: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v8",
                            ),
                            var_expr: Spanned {
                                value: Filter(
                                    Filter {
                                        context_names: ContextNames {
                                            item: Name(
                                                "v3",
                                            ),
                                            position: Name(
                                                "v4",
                                            ),
                                            last: Name(
                                                "v5",
                                            ),
                                        },
                                        var_atom: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v2",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    1,
                                                ),
                                                length: SourceOffset(
                                                    4,
                                                ),
                                            },
                                        },
                                        return_expr: Spanned {
                                            value: Binary(
                                                Binary {
                                                    left: Spanned {
                                                        value: Variable(
                                                            Name(
                                                                "v3",
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                0,
                                                            ),
                                                            length: SourceOffset(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                    op: ValueGt,
                                                    right: Spanned {
                                                        value: Const(
                                                            Integer(
                                                                2,
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                12,
                                                            ),
                                                            length: SourceOffset(
                                                                1,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    7,
                                                ),
                                                length: SourceOffset(
                                                    6,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        7,
                                    ),
                                    length: SourceOffset(
                                        6,
                                    ),
                                },
                            },
                            return_expr: Spanned {
                                value: Filter(
                                    Filter {
                                        context_names: ContextNames {
                                            item: Name(
                                                "v9",
                                            ),
                                            position: Name(
                                                "v10",
                                            ),
                                            last: Name(
                                                "v11",
                                            ),
                                        },
                                        var_atom: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v8",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    7,
                                                ),
                                                length: SourceOffset(
                                                    6,
                                                ),
                                            },
                                        },
                                        return_expr: Spanned {
                                            value: Binary(
                                                Binary {
                                                    left: Spanned {
                                                        value: Variable(
                                                            Name(
                                                                "v9",
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                0,
                                                            ),
                                                            length: SourceOffset(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                    op: ValueLt,
                                                    right: Spanned {
                                                        value: Const(
                                                            Integer(
                                                                3,
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                20,
                                                            ),
                                                            length: SourceOffset(
                                                                1,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    15,
                                                ),
                                                length: SourceOffset(
                                                    6,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        15,
                                    ),
                                    length: SourceOffset(
                                        6,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            15,
                        ),
                        length: SourceOffset(
                            6,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                15,
            ),
            length: SourceOffset(
                6,
            ),
        },
    },
)
